admin page done

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,2 +1,11 @@
 $pink: #e91e63;
 $dark-blue: #4929b3;
+
+$primary: #3c4b64;
+$secondary: #ced2d8;
+$success: #2eb85c;
+$info: #39f;
+$warning: #f9b115;
+$danger: #e55353;
+$light: #ebedef;
+$dark: #636f83;
