--- a/src/scss/admin/pages/admin-posts-mobile.scss
+++ b/src/scss/admin/pages/admin-posts-mobile.scss
@@ -1,4 +1,4 @@
-.posts-mobile {
+.admin-posts-mobile {
   padding: 10px 10px 30px;
   border-bottom: 1px solid #e0e0e0;
   border-right: 1px solid #e0e0e0;
