--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,5 +1,32 @@
 .header {
+  background: $dark;
+  padding: 10px 0;
+
   &__container {
     @include container;
+    display: flex;
+    align-items: center;
+  }
+
+  &__logo {
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 50px;
+      margin-right: 5px;
+    }
+  }
+
+  &__logo-uptext {
+    text-transform: uppercase;
+    font-size: 8px;
+    color: #fff;
+  }
+
+  &__logo-subtext {
+    font-size: 20px;
+    color: #fff;
+    font-weight: 700;
   }
 }
